# pico_ble_hid

./: .gitignore  CMakeLists.txt  COPYING.LESSER  README.md  ble_hid-pico_w.uf2  ble_hid.gatt  blehid_config.h  bt_device.c  bt_device.h  btstack_config.h  hid_report.c  hid_report.h  main.c  rebuild.sh  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_device.c  usb_device.h  usb_host.c  usb_host.h
